// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Image renders <img> 1`] = `
<DocumentFragment>
  <img
    alt="alt"
    loading="lazy"
    src="src"
  />
</DocumentFragment>
`;

exports[`Image renders GatsbyImage 1`] = `
<DocumentFragment>
  <img
    alt="alt"
    loading="lazy"
    src="image"
  />
</DocumentFragment>
`;
